--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ rustc-hash = "1.1.0"
 tokio = { version = "1.22.0", default-features = false, features = ["rt"] }
 tween = { version = "2.0.0", features = ["glam"] }
 map-range = "0.1.1"
+manifest-dir-macros = "0.1.18"
 
 [dependencies.stardust-xr-fusion]
 git = "https://github.com/StardustXR/core.git"
-# path = "../../core/fusion"
+branch = "dev"
 
 [dependencies.stardust-xr-molecules]
 git = "https://github.com/StardustXR/molecules.git"
-# path = "../../molecules"
+branch = "dev"
