--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-color-eyre = "0.6.2"
 glam = { version = "0.23.0", features = ["mint"] }
-mint = "0.5.9"
-rustc-hash = "1.1.0"
 tokio = { version = "1.22.0", default-features = false, features = ["rt"] }
-tween = { version = "2.0.0", features = ["glam"] }
 map-range = "0.1.1"
-manifest-dir-macros = "0.1.18"
+derive-where = "1.2.7"
+serde = { version = "1.0.219", features = ["derive"] }
 
 [dependencies.stardust-xr-fusion]
 git = "https://github.com/StardustXR/core.git"
@@ -19,4 +16,8 @@ branch = "dev"
 
 [dependencies.stardust-xr-molecules]
 git = "https://github.com/StardustXR/molecules.git"
+branch = "dev"
+
+[dependencies.asteroids]
+git = "https://github.com/StardustXR/asteroids.git"
 branch = "dev"
