--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-glam = { version = "0.23.0", features = ["mint"] }
+glam = { version = "0.23.0", features = ["mint", "serde"] }
 tokio = { version = "1.22.0", default-features = false, features = ["rt"] }
 map-range = "0.1.1"
 derive-where = "1.2.7"
