--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,5 @@ git = "https://github.com/StardustXR/molecules.git"
 branch = "dev"
 
 [dependencies.stardust-xr-asteroids]
-# git = "https://github.com/StardustXR/asteroids.git"
-# branch = "dev"
-path = "../../asteroids2"
+git = "https://github.com/StardustXR/asteroids.git"
+branch = "dev"
