--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ derive-where = "1.2.7"
 serde = { version = "1.0.219", features = ["derive"] }
 
 [dependencies.stardust-xr-fusion]
-version = "0.50.0"
+# version = "0.50.0"
 git = "https://github.com/StardustXR/core.git"
 
 [dependencies.stardust-xr-molecules]
-version = "0.50.0"
+# version = "0.50.0"
 git = "https://github.com/StardustXR/molecules.git"
 
 [dependencies.stardust-xr-asteroids]
-version = "0.50.0"
+# version = "0.50.0"
 git = "https://github.com/StardustXR/asteroids.git"
